# thamizh-mcp

./: .gitattributes  .gitignore  AUTHORS  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  TESTING-ON-LINUX.md  pyproject.toml
data/: PINS.md  eval_fixtures.json
data/equivalents/indic-to-pure-tamil/: tamilchol.csv  tamilmandram.csv  thamizhdna-org.csv  viruba.csv
schemas/: word_analysis_schema.json
scripts/: analyze.py
src/thamizh_mcp/: __init__.py  config.py  normalize.py  schema.py  server.py
src/thamizh_mcp/adapters/: base.py  kalaichol.py  lexicon.py  thamizhimorph.py  wiktionary.py
src/thamizh_mcp/core/: classifier.py  decoder.py  engine.py
src/thamizh_mcp/store/: knowledge.py  schema.sql
tests/: test_analyze_word_stub.py  test_classifier.py  test_decoder.py  test_engine_integration.py  test_formation.py  test_store.py  test_thamizhimorph.py  test_tools.py  test_transactions.py  test_wiktionary_parse.py
tests/fixtures/: words.json
