[project]
name = "thamizh-mcp"
version = "0.1.0"
description = "Thamizh MCP — source-grounded Tamil word-grammar (சொல் இலக்கணம்) analysis MCP server"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Saran Saravanan", email = "saravanan3@duck.com" }]
dependencies = [
  "mcp[cli]>=1.2.0",
  "pydantic>=2.7",
  "httpx>=0.27",
  "anyio>=4.4",
  "open-tamil>=1.1",
]

[project.optional-dependencies]
# stanza deferred off the single-word path (hosting-plan cost lever); install with `uv sync --extra full`
full = ["stanza>=1.8"]

[dependency-groups]
# dev tooling — installed by default on `uv sync`; run tests with `uv run pytest -q`
dev = ["pytest>=8"]

[project.scripts]
thamizh-mcp = "thamizh_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/thamizh_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
